# tauri-plugin-module-federation

./: Cargo.toml  LICENSE_APACHE-2.0  LICENSE_MIT  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
example/: README.md  package.json
example/guest/: package.json  rspack.config.js
example/guest-2/: package.json  rspack.config.js
example/guest-2/src/: App.js  Button.js
example/guest/src/: Button.js
example/host/: package.json  rspack.config.js
example/host/src/: App.js  Button.js
example/host/src-tauri/: Cargo.toml  tauri.conf.json
example/host/src-tauri/src/: lib.rs
module-federation-plugin/: README.md  index.js  package.json
tauri-plugin/: Cargo.toml
tauri-plugin/permissions/autogenerated/: reference.md
tauri-plugin/src/: desktop.rs  lib.rs  mobile.rs
